<?xml version="1.0"?>
<package format="3">
  <name>radr_sensor_hub</name>
  <version>0.1.0</version>
  <description>Publish and store DHT22, MPU6050, and multi-camera data.</description>
  <maintainer email="radr@example.com">radr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>radr_gps_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ament_index_python</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
