<?xml version="1.0"?>
<package format="3">
  <name>radr_gps_msgs</name>
  <version>0.1.0</version>
  <description>GPS summary messages (parsed NMEA, gps_parsed_live fields).</description>
  <maintainer email="radr@example.com">radr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
